OldStuff/tests/copies/newAndNeedChangeTests/fail/GreaterOrEqual.java
package fail;

import java.lang.System;

public class GreaterOrEqual {

  public static void main(String[] args ) {
    "hello" > 32;
  }

}
